# CudaCourse

./: .gitignore  LICENSE  README.md  my_cuda.cu
course/10_lesson/: CMakeLists.txt  Runner.cu
course/1_lesson/: readme.txt
course/2_lesson/: main.cu
course/3_lesson/: main.cu
course/4_lesson/: Runner.cu
course/5_lesson/: CMakeLists.txt  Runner.cu  RunnerConstMemory.cu  imageKernels.cuh
course/6_lesson/: Runner.cu  imageKernels.cuh  terrain10x10.tif
course/7_lesson/: CMakeLists.txt  Runner.cu  imageKernels.cuh
course/8_lesson/: CMakeLists.txt  Runner.cu
course/9_lesson/: Runner.cu
cudaByExamples/: chapter_1_to_4.cu  chapter_5.cu  main.cu  my_cuda.cu
cudaByExamples/julia/: julia  julia.cu
project/: CMakeLists.txt  CudaRandom.txt  main.cu
project/include/: cell.cuh  cell_grid.cuh  cuda_utils.cuh  evolution_kernels.cuh  fitness_texture.cuh  image.h  neighborhood_type.h
project/src/: .cell_grid.cu.swp  cell_grid.cu  image.cpp
